--- a/app/templates/index.jinja
+++ b/app/templates/index.jinja
@@ -1,15 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ title.title() }} - FakeBook</title>
-</head>
-<body>
+{% extends 'base.jinja' %}
 
+{% block content %}
     <h1>Greetings CDN</h1>
-    <p>Instructors: {{ instructors }}</p>
-    <p>Students: {{ students }}</p>
-</body>
-</html>
+    <h2>Instructors</h2>
+    {% for instructor in instructors %}
+        <span>{{ instructor.title() }} </span>
+    {% endfor %}
+    <h2>Students</h2>
+    {% for student in students %}
+        <p>{{ student.title() }}</p>
+    {% endfor %}
+{% endblock %}
