--- a/app/templates/navbar.jinja
+++ b/app/templates/navbar.jinja
@@ -7,16 +7,16 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/">Home</a>
+          <a class="nav-link active" aria-current="page" href="{{ url_for('index') }}">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/about">About</a>
+          <a class="nav-link" href="{{ url_for('about') }}">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" href="/login">Log In</a>
+          <a class="nav-link active" href="{{ url_for('login') }}">Log In</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" href="/register">Register</a>
+          <a class="nav-link active" href="{{ url_for('register') }}">Register</a>
         </li>
       </ul>
     </div>
